[gd_scene load_steps=2 format=3 uid="uid://c4jf3el2fhgtp"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_512vs"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_512vs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Character set:"

[node name="ItemList" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Button")
item_count = 2
selected = 0
popup/item_0/text = "ITU"
popup/item_0/id = 0
popup/item_1/text = "CYR"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Hide codes:"

[node name="Button" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Beep frequency:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
min_value = 100.0
max_value = 4000.0
step = 10.0
value = 800.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../HBoxContainer/ItemList")
text = "Back"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
